Sql Azure connection string added and add migration

--- a/TastyReviewsServer/appsettings.json
+++ b/TastyReviewsServer/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-P4LR2A4;Database=TastyReviews;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;User Id=sa;Password=admin123;"
+    //"DefaultConnection": "Server=DESKTOP-P4LR2A4;Database=TastyReviews;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;User Id=sa;Password=admin123;"
+    "DefaultConnection": "Server=tcp:tastyreview.database.windows.net,1433;Initial Catalog=tastyreviewserver-database;Persist Security Info=False;User ID=jjhounxnzz;Password=7IBN7GVI577IG160$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "ValidAudience": "http://localhost:4200",
