--- a/.github/workflows/master_tastyreviewserver.yml
+++ b/.github/workflows/master_tastyreviewserver.yml
@@ -46,7 +46,11 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: .net-app
-      
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}          
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
