--- a/.github/workflows/TastyReviewServer.yml
+++ b/.github/workflows/TastyReviewServer.yml
@@ -50,6 +50,12 @@ jobs:
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        creds: ${{ secrets.TastyReviewsServerapi_SPN }}
   deploy:
     runs-on: ubuntu-latest
     needs: build
