Debugging the api call

--- a/TastyReviewsServer/appsettings.json
+++ b/TastyReviewsServer/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=DESKTOP-P4LR2A4;Database=TastyReviews;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;User Id=sa;Password=admin123;"    
-    "DefaultConnection": "AZURE_MYSQL_CONNECTIONSTRING"
+    "DefaultConnection": "Server=DESKTOP-P4LR2A4;Database=TastyReviews;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;User Id=sa;Password=admin123;"    
+    //"DefaultConnection": "AZURE_MYSQL_CONNECTIONSTRING"
   },
   "Jwt": {
     "ValidAudience": "http://localhost:4200",
