--- a/.github/workflows/master_tastyreviewserver.yml
+++ b/.github/workflows/master_tastyreviewserver.yml
@@ -49,6 +49,7 @@ jobs:
       - name: Azure Login
         uses: azure/login@v1
         with:
+          auth-type: IDENTITY
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}          
       - name: Deploy to Azure Web App
