--- a/.github/workflows/master_tastyreviewserver.yml
+++ b/.github/workflows/master_tastyreviewserver.yml
@@ -51,7 +51,8 @@ jobs:
         with:
           auth-type: IDENTITY
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}          
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}      
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
