--- a/.github/workflows/TastyReviewServer.yml
+++ b/.github/workflows/TastyReviewServer.yml
@@ -53,6 +53,7 @@ jobs:
     - name: Azure Login
       uses: azure/login@v1
       with:
+        auth-type: IDENTITY
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         creds: ${{ secrets.TastyReviewsServerapi_SPN }}
