--- a/.github/workflows/master_tastyreviewserver.yml
+++ b/.github/workflows/master_tastyreviewserver.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Azure Login
         uses: azure/login@v1
         with:
-          auth-type: IDENTITY
+          auth-type: SERVICE_PRINCIPAL
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}      
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
