--- a/.github/workflows/master_tastyreviewserver.yml
+++ b/.github/workflows/master_tastyreviewserver.yml
@@ -8,7 +8,10 @@ on:
     branches:
       - master
   workflow_dispatch:
-
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 jobs:
   build:
     runs-on: ubuntu-latest
