--- a/.github/workflows/TastyReviewServer.yml
+++ b/.github/workflows/TastyReviewServer.yml
@@ -66,7 +66,7 @@ jobs:
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
         publish-profile: ${{ secrets.TastyReviewServer_D7FE }}  
     - name: Import API into Azure API Management
-      run: az apim api import --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" --resource-group "${{ env.TastyReviewServer_group }}" --service-name "${{ env.TastyReviewsServerapi }}" --api-id "${{ env.TastyReviewsServer }}" --service-url "${{env.TastyReviewServer-apim}}" --specification-path "$TastyReviewsServer/publish/swagger.json" --specification-format OpenApi --subscription-required false
+      run: az apim api import --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" --resource-group "$TastyReviewServer_group" --service-name "$TastyReviewsServerapi" --api-id "${{ env.TastyReviewsServer }}" --service-url "${{env.TastyReviewServer-apim}}" --specification-path "$TastyReviewsServer/publish/swagger.json" --specification-format OpenApi --subscription-required false
     - name: logout
       run: >
         az logout
