Work flow changes

--- a/.github/workflows/TastyReviewServer.yml
+++ b/.github/workflows/TastyReviewServer.yml
@@ -61,19 +61,13 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: webapp
-        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-    - name: Azure Login
-      uses: azure/login@v1
-      with:       
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}        
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}  
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-        publish-profile: ${{ secrets.TastyReviewServer_D7FE }}     
+        publish-profile: ${{ secrets.API_PUBLISH_SECRET }}     
     - name: logout
       run: >
         az logout
